--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,9 +8,6 @@ RUN yarn install --frozen-lockfile
 
 COPY . .
 
-RUN yarn build
-RUN yarn global add serve
-
 EXPOSE 3000
 
-CMD ["serve", "-s", "build", "-l", "3000", "--no-clipboard", "--detached"]
+CMD ["yarn", "start"]
