added veryfing aws token functionality

--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.575.0",
     "amazon-cognito-identity-js": "^6.3.12",
+    "aws-jwt-verify": "^4.0.1",
     "aws-sdk": "^2.1619.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
+    "jwks-rsa": "^3.1.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.15",
     "stream-chat": "^6.2.0",
